[package]
name = "tus-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
camino = { version = "1.1.7", features = ["serde"] }
displaydoc = "0.2.5"
rand = "0.8.5"
reqwest = "0.12.5"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
tempfile = "3.10.1"
thiserror = "1.0.63"
tokio = { version = "1.39.2", features = ["full"] }
url = { version = "2.5.2", features = ["serde"] }
uuid = { version = "1.10.0", features = ["v4", "serde"] }

[build-dependencies]
tonic-build = "0.11"
